gitops/platform-edge/mlflow.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-clean-url
  namespace: ml-platform
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mlflow.ai-platform.local
      secretName: mlflow-edge-tls
  rules:
    - host: mlflow.ai-platform.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlflow
                port:
                  number: 5000
